# agent-playground

./: .gitignore  readme.md
.devcontainer/: devcontainer.json
webapp/backend/: .env.example  README.md  pyproject.toml
webapp/backend/app/: main.py  models.py  settings.py
webapp/frontend/: package.json  pnpm-lock.yaml  proxy.mjs
webapp/frontend/src/app/: layout.tsx  page.tsx
